fix: our-services text overflow + ellipsis, fix box-shadow

--- a/style.css
+++ b/style.css
@@ -236,6 +236,8 @@ body {
 
 .services-item {
   width: 300px;
+  height: 91px;
+  overflow: hidden;
   /* flex-grow: 1; */
 }
 
@@ -381,6 +383,7 @@ body {
   color: #666d89;
 
   white-space: nowrap;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 
@@ -523,7 +526,7 @@ body {
 .quote-container .quote-form > fieldset > input:hover,
 .quote-container .quote-form > fieldset > textarea:hover,
 .quote-container .quote-form > button:hover {
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5), inset 0 0 0 50px #d6564f;
   transition: box-shadow .25s ease-in;
 }
 
